--- a/.editorconfig
+++ b/.editorconfig
@@ -23,3 +23,6 @@ trim_trailing_whitespace = false
 [{package,bower}.json]
 indent_style = space
 indent_size = 2
+
+[remote "origin"]
+url=ssh://github.com/Txibani/chrome-extension.git
