--- a/.editorconfig
+++ b/.editorconfig
@@ -25,4 +25,4 @@ indent_style = space
 indent_size = 2
 
 [remote "origin"]
-url=ssh://github.com/Txibani/chrome-extension.git
+url=ssh://git@github.com:Txibani/chrome-extension.git
